--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
                   docker run --name portfolio-mysql -itd \
                       -p 3306:3306 \
                       --env=MYSQL_ROOT_PASSWORD=${{ vars.MYSQL_PASS}} \
-                      ${{ vars.DOCKER_USERNAME }}/${{ vars.MYSQL_DB_NAME }}:latest
+                      ${{ vars.DOCKER_USERNAME }}/${{ vars.MYSQL_DB_NAME }}:v1
                   docker run --name portfolio -itd \
                       -p 80:80 \
                       --link portfolio-mysql:portfolio-mysql \
