--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     depends_on:
       - portfolio-mysql
   portfolio-mysql:
-    image: sabatiel180/mysql:v1
+    image: sabatiel180/mysql
     ports:
       - "3306:3306"
     environment:
